[Collapse] Fixed animation glitch

--- a/src/theme/base/collapse.scss
+++ b/src/theme/base/collapse.scss
@@ -31,6 +31,7 @@
         box-sizing: border-box;
         border-bottom: 1px solid $--collapse-border-color;
         opacity: 0;
+        position: absolute;
     }
 
     @include e(content) {
